second commit by master

--- a/linux.html
+++ b/linux.html
@@ -1,2 +1,3 @@
 This data is stored by master.
 This data is stored by developer.
+This second line is added by[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[D[D[D[D master.
